2008-07-09  Marek Safar  <marek.safar@gmail.com>

	* class.cs: Use event resolve context when initializing CreateEmitContext.

2008-07-09  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #394436
	* anonymous.cs, class.cs, expression.cs, lambda.cs: Emit correctly extension
	method used inside expression trees. Added more LINQ to expression tree
	conversions.

2008-07-08  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #378189, #370577
	* lambda.cs, ecore.cs: Implemented 3.0 enhancement to better conversion
	from expression.

2008-07-08  Marek Safar  <marek.safar@gmail.com>

	* anonymous.cs, class.cs, decl.cs: Emit CompilerGenerated attribute
	hierarchically.

2008-07-08  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #406702
	* anonymous.cs: Always park anonymous method in the nearest parent storey.

2008-07-07  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #406648
	* cs-parser.jay: Report nullable use in mcs for some cases.

2008-07-07  Marek Safar  <marek.safar@gmail.com>

	* ecore.cs: Improved argument mismatch error messages.

2008-07-07  Marek Safar  <marek.safar@gmail.com>

	* anonymous.cs: Don't cache generic delegates when reference MVAR argument.

2008-07-07  Marek Safar  <marek.safar@gmail.com>

	* expression.cs (TypeOf): Mutate type argument.

2008-07-04  Marek Safar  <marek.safar@gmail.com>

	* class.cs: Report missing partial modifier for correct type.

2008-07-04  Marek Safar  <marek.safar@gmail.com>

	* ecore.cs, expression.cs (VariableReference): Variable property is 
	protected.

2008-07-04  Marek Safar  <marek.safar@gmail.com>

	* ecore.cs, convert.cs: Made OpcodeCast more memory efficient.
	
2008-07-04  Marek Safar  <marek.safar@gmail.com>

	* anonymous.cs, class.cs, lambda.cs, iterator.cs: Cache static anonymous
	method delegates.

2008-07-04  Marek Safar  <marek.safar@gmail.com>

	* anonymous.cs, class.cs, expression.cs, iterator.cs, statement.cs: Reduce